@@ -75,7 +75,8 @@ public class GenFoodResource extends GenFood implements RawMaterial, Food
 				return;
 			rot.setAffectedOne(null);
 		}
-		rot.executeMsg(this,msg);
+		if(!CMSecurity.isDisabled(CMSecurity.DisFlag.FOODROT))
+			rot.executeMsg(this,msg);
 	}
 
 	@Override
@@ -101,8 +102,11 @@ public class GenFoodResource extends GenFood implements RawMaterial, Food
 				return true;
 			rot.setAffectedOne(null);
 		}
-		if(!rot.okMessage(this,msg))
-			return false;
+		if(!CMSecurity.isDisabled(CMSecurity.DisFlag.FOODROT))
+		{
+			if(!rot.okMessage(this,msg))
+				return false;
+		}
 		return super.okMessage(host,msg);
 	}
 
